# SimIMS

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md
.baresip/: accounts  config  contacts  uuid
.baresip-invite/callee/: accounts  config  contacts  uuid
.baresip-invite/caller/: accounts  config  uuid
config/: ims-baresip.yaml  ims.dual-opc-test.yaml  ims.yaml  linphone-local.yaml
data/: register_ok.data  register_request.data  subscribe_ok.data  subscribe_request.data
docs/: architecture.md  deployment.md  dns.md  osip_exosip_api_reference.md  osip_exosip_overview.md  requirements.md
docs/superpowers/specs/: 2026-04-15-ue-mongodb-registration-design.md
include/ims/common/: config.hpp  io_context.hpp  logger.hpp
include/ims/diameter/: ihss_client.hpp  ipcf_client.hpp  types.hpp
include/ims/dns/: resolver.hpp
include/ims/media/: rtpengine_client.hpp  types.hpp
include/ims/registration/: store.hpp
include/ims/sip/: dialog.hpp  message.hpp  proxy_core.hpp  stack.hpp  transaction.hpp  transport.hpp
rtpengine/: .env.example  docker-compose.yaml
src/allinone/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt  config.cpp  config.hpp  io_context.cpp  io_context.hpp  logger.cpp  types.hpp
src/crypt/: CMakeLists.txt  milenage.cpp  milenage.hpp  milenage_adapter.cpp  milenage_adapter.hpp
src/db/: CMakeLists.txt  mongo_client.cpp  mongo_client.hpp  mongo_subscriber_repository.cpp  mongo_subscriber_repository.hpp  subscriber_codec.cpp  subscriber_codec.hpp  subscriber_repository.hpp
src/diameter/: CMakeLists.txt  aka_vector_builder.cpp  aka_vector_builder.hpp  cx_client.cpp  cx_client.hpp  ihss_client.hpp  ipcf_client.hpp  mongo_hss_client.cpp  mongo_hss_client.hpp  rx_client.cpp  rx_client.hpp
src/dns/: CMakeLists.txt  resolver.cpp  resolver.hpp
src/i-cscf/: CMakeLists.txt  icscf_service.cpp  icscf_service.hpp  main.cpp  scscf_selector.cpp  scscf_selector.hpp
src/icscf/: icscf_service.cpp  icscf_service.hpp  main.cpp  scscf_selector.cpp  scscf_selector.hpp
src/media/: CMakeLists.txt  bencode.cpp  bencode.hpp  media_session.cpp  media_session.hpp  rtpengine_client.cpp  rtpengine_client_impl.hpp
src/p-cscf/: CMakeLists.txt  main.cpp  pcscf_service.cpp  pcscf_service.hpp
src/pcscf/: CMakeLists.txt  main.cpp  pcscf_service.cpp  pcscf_service.hpp
src/registration/: CMakeLists.txt  memory_store.cpp  memory_store.hpp
src/rtp/: CMakeLists.txt  media_session.cpp  media_session.hpp  rtpengine_client.cpp  rtpengine_client.hpp  rtpengine_client_impl.hpp
src/s-cscf/: CMakeLists.txt  auth_manager.cpp  auth_manager.hpp  digest_auth_provider.cpp  digest_auth_provider.hpp  digest_credential_store.cpp  digest_credential_store.hpp  i_auth_provider.hpp  ims_aka_auth_provider.cpp  ims_aka_auth_provider.hpp  main.cpp  mongo_digest_credential_store.cpp  mongo_digest_credential_store.hpp  registrar.cpp  registrar.hpp  scscf_service.cpp  scscf_service.hpp  session_router.cpp  session_router.hpp
src/scscf/: CMakeLists.txt  auth_manager.cpp  auth_manager.hpp  main.cpp  registrar.cpp  registrar.hpp  scscf_service.cpp  scscf_service.hpp  session_router.cpp  session_router.hpp
src/sip/: CMakeLists.txt  dialog.cpp  dialog.hpp  exosip_context.cpp  exosip_context.hpp  memory_store.cpp  memory_store.hpp  message.cpp  message.hpp  proxy_core.cpp  proxy_core.hpp  reg_event_notifier.cpp  reg_event_notifier.hpp  stack.cpp  stack.hpp  store.hpp  transaction.cpp  transaction.hpp  transport.cpp  transport.hpp  uri_utils.cpp  uri_utils.hpp
tests/mocks/: mock_digest_credential_store.hpp  mock_hss_client.hpp  mock_pcf_client.hpp  mock_registration_store.hpp  mock_rtpengine_client.hpp  mock_subscriber_repository.hpp  mock_transport.hpp
tests/unit/: CMakeLists.txt  test_auth_manager.cpp  test_auth_providers.cpp  test_bencode.cpp  test_config.cpp  test_diameter_cx.cpp  test_dns_resolver.cpp  test_exosip_adapter.cpp  test_icscf_service.cpp  test_media_session.cpp  test_milenage.cpp  test_mongo_digest_credential_store.cpp  test_mongo_hss_client.cpp  test_mongo_subscriber_repository.cpp  test_pcscf_service.cpp  test_proxy_core.cpp  test_registrar.cpp  test_registration_store.cpp  test_rtpengine_client.cpp  test_scscf_service.cpp  test_session_router.cpp  test_sip_message.cpp  test_sip_stack.cpp  test_subscriber_codec.cpp  test_transaction_layer.cpp  test_transport.cpp
tools/: test_baresip_invite.sh  test_baresip_register.sh  ue_sip_client.py
webui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
webui/server/: index.ts
webui/src/: App.vue  styles.css
